add queries